--- a/app/src/main/res/layout/activity_formulas_principal.xml
+++ b/app/src/main/res/layout/activity_formulas_principal.xml
@@ -1,23 +1,97 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="horizontal"
-    tools:context="net.allacalle.android.prototipourgencyassist25.FormulasPrincipal">
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <!-- Header aligned to top -->
+    <LinearLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="#FC9"
+        android:gravity="center" >
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="1dp"
+            android:layout_weight="1"
+            android:text="Formulas"
+            android:textColor="#000"
+            android:background="#9E9E9E"
+            />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="1dp"
+            android:text="Recientes"
+            android:layout_weight="1"
+            android:textColor="#000"
+            android:background="#9E9E9E"
+            />
 
 
-</LinearLayout>
+    </LinearLayout>
+
+    <!-- Footer aligned to bottom -->
+    <LinearLayout
+        android:id="@+id/footer"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#E1BEE7"
+        android:gravity="center"
+        android:orientation="vertical"
+        >
+    </LinearLayout>
+
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:id="@+id/Botonera"
+            android:layout_height="match_parent"
+            android:layout_above="@id/footer"
+            android:layout_below="@id/header"
+            >
+            <Button
+                android:id="@+id/BtnAlto"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:background="#FFCDD2"
+                android:text="Alto"
+                android:layout_height="0dp">
+            </Button>
+
+
+            <Button
+                android:id="@+id/BtnMedio"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:background="#FFF59D"
+                android:text="Medio"
+                android:layout_height="0dp">
+            </Button>
+
+
+            <Button
+                android:id="@+id/BtnBajo"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:background="#CCFF90"
+                android:text="Bajo"
+                android:layout_height="0dp">
+            </Button>
+
+
+        </LinearLayout>
+
+
+        <!-- Inflate the contents of the ScrollView dynamicaly -->
+
+</RelativeLayout>
+
+
