--- a/app/src/main/res/layout/activity_detalles_formula.xml
+++ b/app/src/main/res/layout/activity_detalles_formula.xml
@@ -11,26 +11,19 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="#FC9"
+        android:orientation="horizontal"
         android:gravity="center" >
 
         <Button
             android:layout_width="0dp"
+            android:id="@+id/BtnAtras"
             android:layout_height="wrap_content"
             android:layout_margin="1dp"
             android:layout_weight="1"
-            android:text="Formulas"
-            android:textColor="#000"
-            android:background="#9E9E9E"
-            />
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="1dp"
-            android:text="Recientes"
-            android:layout_weight="1"
-            android:textColor="#000"
-            android:background="#9E9E9E"
+            android:text="Atras"
+            android:textColor="#fff"
+            android:background="#3949AB"
+            android:gravity="left"
             />
 
 
