--- a/app/src/main/res/layout/activity_recientes.xml
+++ b/app/src/main/res/layout/activity_recientes.xml
@@ -1,12 +1,65 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="net.allacalle.android.prototipourgencyassist25.Recientes">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <!-- Header aligned to top -->
+    <LinearLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="#FC9"
+        android:orientation="horizontal"
+        android:gravity="center" >
+
+
+
+
+
+
+    </LinearLayout>
+
+    <!-- Footer aligned to bottom -->
+    <LinearLayout
+        android:id="@+id/footer"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#E1BEE7"
+        android:gravity="center"
+        android:orientation="vertical"
+        >
+
+
+
+    </LinearLayout>
+
+    <!-- Scrollable Item below header and above footer -->
+    <ScrollView
+        android:id="@+id/scrollableContents"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@id/footer"
+        android:background="#C5CAE9"
+        android:layout_below="@id/header"
+        android:fillViewport="false">
+
+        <LinearLayout
+            android:id="@+id/LytContenedor"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:ellipsize="none"
+            android:scrollHorizontally="false"
+            >
+        </LinearLayout>
+
+        <!-- Inflate the contents of the ScrollView dynamicaly -->
+
+    </ScrollView>
 
 </RelativeLayout>
+
