--- a/app/src/main/res/menu/menu_detalles_formula.xml
+++ b/app/src/main/res/menu/menu_detalles_formula.xml
@@ -1,7 +1,34 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="net.allacalle.android.prototipourgencyassist25.DetallesFormula">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    tools:context="net.allacalle.android.prototipourgencyassist25.FormulasPrincipal">
+
+    <item android:id="@+id/action_Formulas"
+        android:title="action_Formulas"
+        android:icon="@drawable/icono_semaforo"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_Ayuda"
+        android:title="Ayuda"
+        android:icon="@drawable/icono_ayuda"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_Recientes"
+        android:title="action_Recientes"
+        android:icon="@drawable/icono_historico"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_Configuracion"
+        android:title="Configuracion"
+        android:icon="@drawable/icono_configuracion"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom" />
+
+
+
+
+
 </menu>
