--- a/app/src/main/res/menu/menu_formulas_principal.xml
+++ b/app/src/main/res/menu/menu_formulas_principal.xml
@@ -2,6 +2,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="net.allacalle.android.prototipourgencyassist25.FormulasPrincipal">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_Formulas"
+        android:title="action_Formulas"
+        android:icon="@drawable/icono_semaforo"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_Recientes"
+        android:title="action_Recientes"
+        android:icon="@drawable/icono_historico"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_Configuracion"
+        android:title="Configuracion"
+        android:icon="@drawable/icono_configuracion"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_Ayuda"
+        android:title="Ayuda"
+        android:icon="@drawable/icono_ayuda"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom" />
+
+
+
 </menu>
